--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodemon -L server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -14,12 +14,7 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.0",
-    "config": "^3.1.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.1",
-    "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0",
-    "passport-jwt": "^4.0.0"
+    "mongoose": "^5.5.1"
   }
 }
