--- a/client/package.json
+++ b/client/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "react-material-passport",
+  "name": "mern-docker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
-    "js-cookie": "^2.2.0",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,11 +18,17 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "https://localhost:5000",
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "https://192.168.0.136:5000"
 }
