--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-material-passport",
+  "name": "mern-docker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
